--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "radio-beautifier",
   "version": "1.0.0",
-  "description": "Beautify radio inputs of your form using compatible and modern looks that will be matched your custom web design.",
+  "description": "Beautify radio inputs of your form using compatible and modern css3 style that will be matched your custom web design.",
   "keywords": ["form", "input", "radio", "style", "css", "css3"],
   "main": "src/index.js",
   "repository": "https://github.com/pavel-macovschi/radio-beautifier",
